--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -73,20 +73,24 @@
             android:name=".activity.CastImageActivity"
             android:screenOrientation="portrait"
             android:theme="@style/MovieDetails" />
+        <activity android:name=".activity.GenreListActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/MovieDetails" />
+        <activity
+            android:name=".activity.SettingsActivity"
+            android:label="@string/title_activity_settings"
+            android:screenOrientation="portrait"
+            android:parentActivityName=".activity.MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.merakiphi.idiotbox.activity.MainActivity" />
+        </activity>
 
         <!-- Include the AdActivity configChanges and theme. -->
         <activity
             android:name="com.google.android.gms.ads.AdActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
             android:theme="@android:style/Theme.Translucent" />
-        <activity
-            android:name=".activity.SettingsActivity"
-            android:label="@string/title_activity_settings"
-            android:parentActivityName=".activity.MainActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.merakiphi.idiotbox.activity.MainActivity" />
-        </activity>
     </application>
 
 </manifest>
