--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,6 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
-
     <application
         android:allowBackup="true"
         android:icon="@drawable/idiot_box_logo"
@@ -77,14 +76,15 @@
             android:name=".activity.CastImageActivity"
             android:screenOrientation="portrait"
             android:theme="@style/MovieDetails" />
-        <activity android:name=".activity.GenreListActivity"
+        <activity
+            android:name=".activity.GenreListActivity"
             android:screenOrientation="portrait"
             android:theme="@style/MovieDetails" />
         <activity
             android:name=".activity.SettingsActivity"
             android:label="@string/title_activity_settings"
-            android:screenOrientation="portrait"
-            android:parentActivityName=".activity.MainActivity">
+            android:parentActivityName=".activity.MainActivity"
+            android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.merakiphi.idiotbox.activity.MainActivity" />
@@ -95,6 +95,8 @@
             android:name="com.google.android.gms.ads.AdActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
             android:theme="@android:style/Theme.Translucent" />
+
+        <activity android:name=".activity.TMDbLoginActivity"></activity>
     </application>
 
 </manifest>
